Version ClaSS-0.9.22 release (2010/7/05)
-----------------------------------------

Made enrolment status an option on the group_search page.

New export from InfoBook which takes displayed columns and writes
straight to xls format.

Added latitude and longitude fields to address table (apply the patch!!).


Version ClaSS-0.9.21 release (2010/6/10)
-----------------------------------------

A small change to the subject sequence for fetchReports.

Added a subject_status field to the report table (apply the patch!).

Change to allow orders to be placed by perms=x even when the balance is zero.

Included some crude postcode analysis to the statistics page in admin.

New day-by-day break down of the attendnace statistics.

Experimenting with new comment writer which does categories and
comments. Only applied to summary comments so far as newcomment_writer.

Added category option to editing report wrappers. Fixed bug with
wrapper form for slection boxes.

Simple js function to highlight suroudning div of checked radio box.

Improved ldap_sync_users so it first checks ldap for existing entry
with matching email address before generating epfusername.



Version ClaSS-0.9.20 release (2010/5/12)
-----------------------------------------

Update to the spanish language pack.

Fix to the comment pop-ups which had lost their span element.

Changed the export of the marktable to use excel instead of csv for
its fileformat. Requires additional PEAR package
Spreadsheet_Excel_Writer.

Extended the length of categorydef name field to be varchar 240 (apply
the patch!).

Added stage as a field to the categorydef table and amended
get_report_categories to make use of it. Now possible to have
different tick-boxes at different stages within the same course-subject.


Version ClaSS-0.9.19 release (2010/5/09)
-----------------------------------------

Updated the liscense to be the GNU AGPL version 3. 

Included logos on the about page for AGPL and ClaSSIS.
