@@ -1,24 +1,29 @@
 <?php
 /**			  					new_invoice_action.php
+ *
  */
 
 $action='orders_list.php';
 $cancel='orders_list.php';
 $budid=$_POST['budid'];
 $ordid=$_POST['ordid'];
-$entryn=$_POST['entryn'];
-$action_post_vars=array('budid');
+$action_post_vars=array('budid','ordid');
 
 include('scripts/sub_action.php');
 
 if($sub=='Submit'){
 
+	$todate=date('Y-m-d');
 	$yearcode=-1;
 	$Invoice=fetchInvoice();
+
 	mysql_query("INSERT INTO orderinvoice SET debitcost='';");
 	$invid=mysql_insert_id();
-	mysql_query("UPDATE orderaction SET invoice_id='$invid' WHERE
-					order_id='$ordid' AND entryn='$entryn';");
+
+	mysql_query("INSERT INTO orderaction SET order_id='$ordid',
+		detail='$detail', actiondate='$todate', 
+		action='3', teacher_id='$tid', invoice_id='$invid';");
+
 	reset($Invoice);
 	while(list($index,$val)=each($Invoice)){
 		if(isset($val['value']) and is_array($val) and isset($val['table_db'])){
